# lambda-image-resize-rust

./: Cargo.toml  Makefile  README.md
src/: config.rs  lib.rs  main.rs
