[package]
name = "lambda-image-resize-rust"
version = "0.1.0"
authors = ["Robert Beekman <robert@matsimitsu.nl>"]
edition = '2018'

[dependencies]
lambda_runtime = "0.2.1"
serde = "^1"
serde_json = "^1"
serde_derive = "*"
log = "^0.4"
simple_logger = "^1"
aws_lambda_events = "^0.4.0"
rust-s3 = {version = "0.26.4", features = ["fail-on-err", "rustls-tls"]}
image= "*"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
