[package]
name = "lambda-image-resize-rust"
version = "0.1.0"
authors = ["Robert Beekman <robert@matsimitsu.nl>"]
edition = '2018'

[dependencies]
tokio = { version = "1.0", features = ["macros"] }
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde = "^1"
serde_json = "^1"
serde_derive = "*"
log = "^0.4"
simple_logger = "^1"
aws_lambda_events = "^0.4.0"
rust-s3 = {version = "0.26.4", features = ["fail-on-err", "rustls-tls"]}
aws-region = "^0.23.2"
smartcrop= { path = "../smartcrop.rs"}
image= "*"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
